added styling to header and footer

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     </header>
     <div id="intro-and-picture">
       <h2 id="introduction">
-        Hi, I'm Karin, a London-based Software Developer
+        Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
       </h2>
       <img
         id="karin-picture"
@@ -28,7 +28,7 @@
       />
     </div>
     <div>
-      <h1>Technical Skills</h1>
+      <h1 class="heading">Technical Skills</h1>
       <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
       <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
       <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
@@ -47,7 +47,7 @@
       />
       <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
     </div>
-    <h1>My Projects</h1>
+    <h1 class="heading">My Projects</h1>
     <div id="projects">
       <!--flex wrap these-->
       <div class="card">
@@ -63,11 +63,11 @@
 
       </div>
       <div class="card">
-        
+
       </div>
       <div class="card"></div>
     </div>
-    <div>
+    <div id="about-me">
       <h1>About Me</h1>
       <p>
         Evening. Replenish I seas. Fowl can't open she'd together fifth Lights
