set flex layout on skill icons and header

--- a/index.html
+++ b/index.html
@@ -10,12 +10,14 @@
   <body>
     <header>
         <h1 id="header-name">Karin</h1>
+        <div id="nav-bar">
         <nav>
           <a href="#" class="nav-link">Home</a>
           <a href="#" class="nav-link">About</a>
           <a href="#" class="nav-link">Projects</a>
-          <a href="#" class="nav-link">Get in Touch</a>
+          <a href="#" class="nav-link" id="contact">Get in Touch</a>
         </nav>
+    </div>
     </header>
     <div id="intro-and-picture">
       <h2 id="introduction">
@@ -27,8 +29,9 @@
         alt="A picture of Karin in a dress standing in a garden"
       />
     </div>
-    <div>
+    <div id="technical-skills">
       <h1 class="heading">Technical Skills</h1>
+      <div id="skill-icon-group">
       <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
       <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
       <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
@@ -47,7 +50,8 @@
       />
       <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
     </div>
-    <h1 class="heading">My Projects</h1>
+    </div>
+    <h1 class="heading" id="my-projects">My Projects</h1>
     <div id="projects">
       <!--flex wrap these-->
       <div class="card">
@@ -86,3 +90,11 @@
     <footer></footer>
   </body>
 </html>
+
+<!--make solid colour at bottom fill bottom
+make footer and info in footer
+add text to the skill icons
+add content to the project cards and sort those out
+fun effect on 
+
+-->
