hover elements on skills and nav bar

--- a/index.html
+++ b/index.html
@@ -31,45 +31,74 @@
     </div>
     <div id="technical-skills">
       <h1 class="heading">Technical Skills</h1>
+      <p id="skills-p">Skills I've gained so far... always looking to create the fullest stack!</p>
       <div id="skill-icon-group">
+        <div>
       <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
+      <h3 class="skill-tag">HTML5</h3>
+    </div>
+    <div>
       <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
+      <h3 class="skill-tag">GIT</h3>
+    </div>
+    <div>
       <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
+      <h3 class="skill-tag">CSS3</h3>
+    </div>
+    <div>
       <img
         class="skill-icon"
         src="./images/Vectorjavascript.png"
         alt="javascript"
       />
+      <h3 class="skill-tag">Javascript</h3>
+    </div>
+    <div>
       <img class="skill-icon" src="./images/Vectorscss.png" alt="scss" />
-      <img class="skill-icon" src="./images/Vectorbem.png" alt="" bem />
+      <h3 class="skill-tag">SCSS</h3>
+    </div>
+    <div>
+      <img class="skill-icon" src="./images/Vectorbem.png" alt="bem" />
+      <h3 class="skill-tag">BEM</h3>
+    </div>
+      <div>
       <img class="skill-icon" src="./images/Vectorreact.png" alt="react" />
+      <h3 class="skill-tag">React</h3>
+      </div>
+    <div>
       <img
         class="skill-icon"
         src="./images/Vectorspringboot.png"
         alt="springboot"
       />
+      <h3 class="skill-tag">Springboot</h3>
+    </div>
+    <div>
       <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
+      <h3 class="skill-tag">Java</h3>
     </div>
     </div>
     <h1 class="heading" id="my-projects">My Projects</h1>
     <div id="projects">
       <!--flex wrap these-->
       <div class="card">
-
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
       </div>
       <div class="card">
-
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
       </div>
       <div class="card">
-
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
       </div>
       <div class="card">
-
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
       </div>
       <div class="card">
-
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
       </div>
-      <div class="card"></div>
+      <div class="card">
+        <p></p>
+      </div>
     </div>
     <div id="about-me">
       <h1>About Me</h1>
@@ -87,11 +116,13 @@
         Behold. Whales from male sixth third him you're open moved.
       </p>
     </div>
-    <footer></footer>
+    <footer>
+
+    </footer>
   </body>
 </html>
 
-<!--make solid colour at bottom fill bottom
+<!--
 make footer and info in footer
 add text to the skill icons
 add content to the project cards and sort those out
