--- a/index.html
+++ b/index.html
@@ -1,103 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Karin's Portfolio</title>
-    <link rel="stylesheet" href="styles.css" />
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Karin's Portfolio</title>
+  <link rel="stylesheet" href="styles.css" />
   </head>
-  <body>
-    <header>
-        <h1 id="header-name">Karin</h1>
-        <div id="nav-bar">
-        <nav>
-          <a href="#" class="nav-link">Home</a>
-          <a href="#" class="nav-link">About</a>
-          <a href="#" class="nav-link">Projects</a>
-          <a href="#" class="nav-link" id="contact">Get in Touch</a>
-        </nav>
+
+<body>
+  <header>
+    <h1 id="header-name">Karin</h1>
+    <div id="nav-bar">
+      <nav>
+        <a href="#" class="nav-link">Home</a>
+        <a href="#" class="nav-link">About</a>
+        <a href="#" class="nav-link">Projects</a>
+        <a href="#" class="nav-link" id="contact">Get in Touch</a>
+      </nav>
     </div>
-    </header>
-    <div id="intro-and-picture">
-      <h2 id="introduction">
-        Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
-      </h2>
-      <img
-        id="karin-picture"
-        src="./images/KarinPicture.jpg"
-        alt="A picture of Karin in a dress standing in a garden"
-      />
-    </div>
-    <div id="technical-skills">
-      <h1 class="heading">Technical Skills</h1>
-      <p id="skills-p">Skills I've gained so far... always looking to create the fullest stack!</p>
-      <div id="skill-icon-group">
-        <div>
-      <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
-      <h3 class="skill-tag">HTML5</h3>
-    </div>
-    <div>
-      <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
-      <h3 class="skill-tag">GIT</h3>
-    </div>
-    <div>
-      <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
-      <h3 class="skill-tag">CSS3</h3>
-    </div>
-    <div>
-      <img
-        class="skill-icon"
-        src="./images/Vectorjavascript.png"
-        alt="javascript"
-      />
-      <h3 class="skill-tag">Javascript</h3>
-    </div>
-    <div>
-      <img class="skill-icon" src="./images/Vectorscss.png" alt="scss" />
-      <h3 class="skill-tag">SCSS</h3>
-    </div>
-    <div>
-      <img class="skill-icon" src="./images/Vectorbem.png" alt="bem" />
-      <h3 class="skill-tag">BEM</h3>
-    </div>
+  </header>
+  <div id="intro-and-picture">
+    <h2 id="introduction">
+      Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
+    </h2>
+    <img id="karin-picture" src="./images/KarinPicture.jpg" alt="A picture of Karin in a dress standing in a garden" />
+  </div>
+  <div id="technical-skills">
+    <h1 class="heading">Technical Skills</h1>
+    <p id="skills-p">Skills I've gained so far... always looking to create the fullest stack!</p>
+    <div id="skill-icon-group">
       <div>
-      <img class="skill-icon" src="./images/Vectorreact.png" alt="react" />
-      <h3 class="skill-tag">React</h3>
+        <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
+        <h3 class="skill-tag">HTML5</h3>
       </div>
-    <div>
-      <img
-        class="skill-icon"
-        src="./images/Vectorspringboot.png"
-        alt="springboot"
-      />
-      <h3 class="skill-tag">Springboot</h3>
-    </div>
-    <div>
-      <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
-      <h3 class="skill-tag">Java</h3>
-    </div>
+      <div>
+        <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
+        <h3 class="skill-tag">GIT</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
+        <h3 class="skill-tag">CSS3</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorjavascript.png" alt="javascript" />
+        <h3 class="skill-tag">Javascript</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorscss.png" alt="scss" />
+        <h3 class="skill-tag">SCSS</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorbem.png" alt="bem" />
+        <h3 class="skill-tag">BEM</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorreact.png" alt="react" />
+        <h3 class="skill-tag">React</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorspringboot.png" alt="springboot" />
+        <h3 class="skill-tag">Springboot</h3>
+      </div>
+      <div>
+        <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
+        <h3 class="skill-tag">Java</h3>
+      </div>
     </div>
     <h1 class="heading" id="my-projects">My Projects</h1>
     <div id="projects">
       <!--flex wrap these-->
       <div class="card">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
       <div class="card">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
       <div class="card">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
       <div class="card">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
       <div class="card">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in many ways</p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
       <div class="card">
-        <p></p>
+        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
+          many ways</p>
       </div>
     </div>
     <div id="about-me">
@@ -117,14 +113,16 @@
       </p>
     </div>
     <footer>
-
+        <h3>karin.hawksworth@gmail.com</h3>
+        <h4>All Rights Reserved 2022</h4>
+        <a href="#" id="linkedin"><img src="./images/linkedin"></a>
     </footer>
-  </body>
+</body>
+
 </html>
 
 <!--
 make footer and info in footer
-add text to the skill icons
 add content to the project cards and sort those out
 fun effect on 
 
