working on responsive design, styled project section

--- a/index.html
+++ b/index.html
@@ -14,13 +14,14 @@
     <h1 id="header-name">Karin</h1>
     <div id="nav-bar">
       <nav>
-        <a href="#" class="nav-link">Home</a>
-        <a href="#" class="nav-link">About</a>
-        <a href="#" class="nav-link">Projects</a>
+        <a href="#home" class="nav-link">Home</a>
+        <a href="#about" class="nav-link">About</a>
+        <a href="#projects" class="nav-link">Projects</a>
         <a href="#" class="nav-link" id="contact">Get in Touch</a>
       </nav>
     </div>
   </header>
+  <main>
   <div id="intro-and-picture">
     <h2 id="introduction">
       Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
@@ -72,26 +73,32 @@
     <div id="projects">
       <!--flex wrap these-->
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
       <div class="card">
+        <img src="./images/project-icon" class="project-icon">
         <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
           many ways</p>
       </div>
@@ -112,6 +119,7 @@
         Behold. Whales from male sixth third him you're open moved.
       </p>
     </div>
+  </main>
     <footer>
         <h3>karin.hawksworth@gmail.com</h3>
         <h4>All Rights Reserved 2022</h4>
@@ -122,8 +130,11 @@
 </html>
 
 <!--
-make footer and info in footer
+responsive design!
 add content to the project cards and sort those out
-fun effect on 
+(linkedin link
+make text letters bounce on my name!
+fun effect on )
+add links to nav
 
 -->
