finished responsive layout

--- a/index.html
+++ b/index.html
@@ -123,17 +123,13 @@
     <footer>
         <h3>karin.hawksworth@gmail.com</h3>
         <h4>All Rights Reserved 2022</h4>
-        <a href="#" id="linkedin"><img src="./images/linkedin"></a>
+        <a id="linkedin" href="https://www.linkedin.com/in/karin-hawksworth-5b3513171/" target="_blank"><img id="linkedinimg" src="./images/linkedin"></a>
     </footer>
 </body>
 
 </html>
 
 <!--
-responsive design!
-add content to the project cards and sort those out
-(linkedin link
-make text letters bounce on my name!
 fun effect on )
 add links to nav
 
