added links in nav.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Karin's Portfolio</title>
   <link rel="stylesheet" href="styles.css" />
-  </head>
+</head>
 
 <body>
   <header>
@@ -15,122 +15,126 @@
     <div id="nav-bar">
       <nav>
         <a href="#home" class="nav-link">Home</a>
-        <a href="#about" class="nav-link">About</a>
+        <a href="#about-me" class="nav-link">About</a>
         <a href="#projects" class="nav-link">Projects</a>
-        <a href="#" class="nav-link" id="contact">Get in Touch</a>
+        <a href="#get_in_touch" class="nav-link" id="contact">Get in Touch</a>
       </nav>
     </div>
   </header>
   <main>
-  <div id="intro-and-picture">
-    <h2 id="introduction">
-      Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
-    </h2>
-    <img id="karin-picture" src="./images/KarinPicture.jpg" alt="A picture of Karin in a dress standing in a garden" />
-  </div>
-  <div id="technical-skills">
-    <h1 class="heading">Technical Skills</h1>
-    <p id="skills-p">Skills I've gained so far... always looking to create the fullest stack!</p>
-    <div id="skill-icon-group">
-      <div>
-        <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
-        <h3 class="skill-tag">HTML5</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
-        <h3 class="skill-tag">GIT</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
-        <h3 class="skill-tag">CSS3</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorjavascript.png" alt="javascript" />
-        <h3 class="skill-tag">Javascript</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorscss.png" alt="scss" />
-        <h3 class="skill-tag">SCSS</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorbem.png" alt="bem" />
-        <h3 class="skill-tag">BEM</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorreact.png" alt="react" />
-        <h3 class="skill-tag">React</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorspringboot.png" alt="springboot" />
-        <h3 class="skill-tag">Springboot</h3>
-      </div>
-      <div>
-        <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
-        <h3 class="skill-tag">Java</h3>
-      </div>
+    <div id="intro-and-picture">
+      <h2 id="introduction">
+        Hi, I'm <span id="karin">Karin</span>, a London-based Software Developer
+      </h2>
+      <img id="karin-picture" src="./images/KarinPicture.jpg"
+        alt="A picture of Karin in a dress standing in a garden" />
     </div>
-    <h1 class="heading" id="my-projects">My Projects</h1>
-    <div id="projects">
-      <!--flex wrap these-->
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
+    <div id="technical-skills">
+      <h1 class="heading">Technical Skills</h1>
+      <p id="skills-p">Skills I've gained so far... always looking to create the fullest stack!</p>
+      <div id="skill-icon-group">
+        <div>
+          <img class="skill-icon" src="./images/Vectorhtml.png" alt="html5" />
+          <h3 class="skill-tag">HTML5</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/VectorGit.png" alt="git" />
+          <h3 class="skill-tag">GIT</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorcss.png" alt="css3" />
+          <h3 class="skill-tag">CSS3</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorjavascript.png" alt="javascript" />
+          <h3 class="skill-tag">Javascript</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorscss.png" alt="scss" />
+          <h3 class="skill-tag">SCSS</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorbem.png" alt="bem" />
+          <h3 class="skill-tag">BEM</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorreact.png" alt="react" />
+          <h3 class="skill-tag">React</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorspringboot.png" alt="springboot" />
+          <h3 class="skill-tag">Springboot</h3>
+        </div>
+        <div>
+          <img class="skill-icon" src="./images/Vectorjava.png" alt="java" />
+          <h3 class="skill-tag">Java</h3>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
+      <h1 class="heading" id="my-projects">My Projects</h1>
+      <div id="projects">
+        <!--flex wrap these-->
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
+        <div class="card">
+          <img src="./images/project-icon" class="project-icon">
+          <p>This is a short description of this project I did. It was a very enlightening project which grew my skills
+            in
+            many ways</p>
+        </div>
       </div>
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
+      <div id="about-me">
+        <h1>About Me</h1>
+        <p>
+          Evening. Replenish I seas. Fowl can't open she'd together fifth Lights
+          spirit he greater itself saying said gathering. They're whales days land
+          over them you'll creeping. Grass sixth Multiply god saying. Second Beast
+          female place morning every, sixth darkness let firmament saw earth.
+          Creepeth without won't, sixth fruit years. Sixth day night darkness let
+          creeping all hath living divided tree. Bearing, image and heaven first
+          moveth make god earth female Beginning herb the, days isn't their can't
+          great spirit. Let land after life, so whales be sea air thing have midst
+          have under life beginning make wherein midst bearing wherein days man.
+          Fly divided dominion he abundantly them kind it air seasons together.
+          Behold. Whales from male sixth third him you're open moved.
+        </p>
       </div>
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
-      </div>
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
-      </div>
-      <div class="card">
-        <img src="./images/project-icon" class="project-icon">
-        <p>This is a short description of this project I did. It was a very enlightening project which grew my skills in
-          many ways</p>
-      </div>
-    </div>
-    <div id="about-me">
-      <h1>About Me</h1>
-      <p>
-        Evening. Replenish I seas. Fowl can't open she'd together fifth Lights
-        spirit he greater itself saying said gathering. They're whales days land
-        over them you'll creeping. Grass sixth Multiply god saying. Second Beast
-        female place morning every, sixth darkness let firmament saw earth.
-        Creepeth without won't, sixth fruit years. Sixth day night darkness let
-        creeping all hath living divided tree. Bearing, image and heaven first
-        moveth make god earth female Beginning herb the, days isn't their can't
-        great spirit. Let land after life, so whales be sea air thing have midst
-        have under life beginning make wherein midst bearing wherein days man.
-        Fly divided dominion he abundantly them kind it air seasons together.
-        Behold. Whales from male sixth third him you're open moved.
-      </p>
-    </div>
   </main>
-    <footer>
-        <h3>karin.hawksworth@gmail.com</h3>
-        <h4>All Rights Reserved 2022</h4>
-        <a id="linkedin" href="https://www.linkedin.com/in/karin-hawksworth-5b3513171/" target="_blank"><img id="linkedinimg" src="./images/linkedin"></a>
-    </footer>
+  <footer>
+    <h3 id="get_in_touch">karin.hawksworth@gmail.com</h3>
+    <h4>All Rights Reserved 2022</h4>
+    <a class="footer-link" href="https://github.com/karinhawk" target="_blank"><img class="footer-img"
+        src="./images/github-icon"></a>
+    <a class="footer-link" href="https://www.linkedin.com/in/karin-hawksworth-5b3513171/" target="_blank"><img
+        class="footer-img" src="./images/linkedin"></a>
+  </footer>
 </body>
 
 </html>
-
-<!--
-fun effect on )
-add links to nav
-
--->
