finished portfolio for now. everything in bem.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  <header class="header">
+  <header class="header" id="home">
     <h1 class="header__logo">Karin</h1>
     <div class="header__nav">
       <nav>
@@ -30,7 +30,7 @@
         alt="A picture of Karin in a dress standing in a garden" />
     </div>
     <div class="skills">
-      <h1 class="skills__heading">Technical Skills</h1>
+      <h1 class="headings skills__heading">Technical Skills</h1>
       <p class="skills__intro">Skills I've gained so far... always looking to create the fullest stack!</p>
       <div class="skills__flex">
         <div>
@@ -70,8 +70,8 @@
           <h3 class="skills__flex__text">Java</h3>
         </div>
       </div>
-      <section class="projects">
-        <h1 class="projects__heading" id="my-projects">My Projects</h1>
+      <section class="projects" id="projects">
+        <h1 class="headings projects__heading" id="projects-heading">My Projects</h1>
         <div class="projects__flex">
           <!--flex wrap these-->
           <div class="projects__flex__card">
@@ -112,20 +112,10 @@
           </div>
         </div>
       </section>
-      <div id="about-me">
-        <h1>About Me</h1>
-        <p>
-          Evening. Replenish I seas. Fowl can't open she'd together fifth Lights
-          spirit he greater itself saying said gathering. They're whales days land
-          over them you'll creeping. Grass sixth Multiply god saying. Second Beast
-          female place morning every, sixth darkness let firmament saw earth.
-          Creepeth without won't, sixth fruit years. Sixth day night darkness let
-          creeping all hath living divided tree. Bearing, image and heaven first
-          moveth make god earth female Beginning herb the, days isn't their can't
-          great spirit. Let land after life, so whales be sea air thing have midst
-          have under life beginning make wherein midst bearing wherein days man.
-          Fly divided dominion he abundantly them kind it air seasons together.
-          Behold. Whales from male sixth third him you're open moved.
+      <div class="about" id="about">
+        <h1 class="about__heading">About Me</h1>
+        <p class="about__text">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae excepturi non qui alias totam placeat expedita quisquam, consequuntur laboriosam modi veritatis nulla magnam assumenda unde natus asperiores, optio officia! Laborum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores et recusandae distinctio temporibus eius perspiciatis delectus, ipsam in sapiente, vero veniam, tempora id? Amet nulla dolor quos aliquam officia. Repellendus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, tempora eum! Saepe necessitatibus fugiat accusantium harum odit, ipsam fugit, animi voluptate maiores quis reprehenderit delectus natus unde excepturi quod molestiae?
         </p>
       </div>
   </main>
