--- a/index.html
+++ b/index.html
@@ -75,37 +75,37 @@
         <div class="projects__flex">
           <!--flex wrap these-->
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img">
+            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
             <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
               skills in
               many ways</p>
@@ -120,12 +120,12 @@
       </div>
   </main>
   <footer class="footer">
-    <h3 class="footer__heading">karin.hawksworth@gmail.com</h3>
+    <h4 class="footer__heading">karin.hawksworth@gmail.com</h4>
     <h4 class="footer__rights">All Rights Reserved 2022</h4>
     <a class="footer__link" href="https://github.com/karinhawk" target="_blank"><img class="footer__link__img"
-        src="./images/github"></a>
+        src="./images/github" alt="github icon"></a>
     <a class="footer__link" href="https://www.linkedin.com/in/karin-hawksworth-5b3513171/" target="_blank"><img
-        class="footer__link__img" src="./images/linkedin"></a>
+        class="footer__link__img" src="./images/linkedin" alt="linkedin icon"></a>
   </footer>
 </body>
 
