--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <a href="#home" class="header__nav__link">Home</a>
         <a href="#about" class="header__nav__link">About</a>
         <a href="#projects" class="header__nav__link">Projects</a>
-        <a href="#" class="header__nav__link header__nav__link--contact" id="contact">Get in Touch</a>
+        <a href="#" class="header__nav__link--contact" id="contact">Get in Touch</a>
       </nav>
     </div>
   </header>
