added real projects in place of the placeholders

--- a/index.html
+++ b/index.html
@@ -73,50 +73,54 @@
       <section class="projects" id="projects">
         <h1 class="headings projects__heading" id="projects-heading">My Projects</h1>
         <div class="projects__flex">
-          <!--flex wrap these-->
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/punk-api">
+              <h3 class="projects__flex__card__text">Punk-API Project</h3>
+            <img src="./images/punkimg.png" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">An application showing off the different beers of Brewdog. The beers can be searched and filtered through. This project was built in React and implemented a free api of Brewdog beers. I explored React features such as useState, useEffect, Routing, and api handling.</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/game-project">
+              <h3 class="projects__flex__card__text">Capybara Dating Simulator</h3>
+            <img src="./images/capybara.png" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">A vanilla Javascript dating simulator. I really showed off with SCSS, a typing animation, and implementing background music to make the application really feel game-like and immersive.</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/ticket-tracker">
+              <h3 class="projects__flex__card__text">Ticket Tracker</h3>
+            <img src="./images/ticket3.png" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">An application to keep track of projects done for each employee via a simple counter. New employees can also be added. This was my first React project called for implementation of useState (toggle of a modal) and reusable components with use of props. </p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/calculator">
+              <h3 class="projects__flex__card__text">Vanilla Calculator</h3>
+            <img src="./images/calculator.png" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">A vanilla Javascript calculator. My first Javascript project which showed how much I had learnt in just 2 weeks. Uses arrays, eventListeners, switch cases, and a classic scss design.</p>
           </div>
           <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
-          </div>
-          <div class="projects__flex__card">
-            <img src="./images/project-icon" class="projects__flex__card__img" alt="picture of a project I did">
-            <p class="projects__flex__card__text">This is a short description of this project I did. It was a very enlightening project which grew my
-              skills in
-              many ways</p>
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/piano-app">
+              <h3 class="projects__flex__card__text">Piano (in progress)</h3>
+            <img src="./images/pianoimg.png" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">A piano built in React which implements useSound and useState. Notes can be played either by clicking the keys or pressing keys on the keyboard.</p>
           </div>
         </div>
       </section>
       <div class="about" id="about">
         <h1 class="about__heading">About Me</h1>
         <p class="about__text">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae excepturi non qui alias totam placeat expedita quisquam, consequuntur laboriosam modi veritatis nulla magnam assumenda unde natus asperiores, optio officia! Laborum! Lorem ipsum dolor, sit amet consectetur adipisicing elit. Asperiores et recusandae distinctio temporibus eius perspiciatis delectus, ipsam in sapiente, vero veniam, tempora id? Amet nulla dolor quos aliquam officia. Repellendus! Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, tempora eum! Saepe necessitatibus fugiat accusantium harum odit, ipsam fugit, animi voluptate maiores quis reprehenderit delectus natus unde excepturi quod molestiae?
-        </p>
+          My name is Karin, a Junior Software Developer. I attended the full-stack developer course which _nology offered, beginning in August and finishing in October 2022.
+          I have made huge progress since beginning the course due to starting with no coding experience and I have consistently turned in high quality projects to praise.
+          Coming from a degree in Music, I’m constantly driven to learn and create, which drew me to a career in Tech due to the similar motivations it shares with Music.
+          
+          </p>
+          <p class="about__text">My strengths include picking up programming languages quickly, designing and coding pleasing user-interfaces; being able to take both leading and collaborative roles; 
+            and having lots and lots of enthusiasm!</p>
+          <p class="about__text">React has been an especially motivating library to work with, spurring me to take on my own projects outside of the course which blend my love of both music and coding.</p>
       </div>
   </main>
   <footer class="footer">
