added hangman to portfolio

--- a/index.html
+++ b/index.html
@@ -95,6 +95,13 @@
             <p class="projects__flex__card__text">An application to keep track of projects done for each employee via a simple counter. New employees can also be added. This was my first React project called for implementation of useState (toggle of a modal) and reusable components with use of props. </p>
           </div>
           <div class="projects__flex__card">
+            <a class="projects__flex__card__link" href="https://github.com/karinhawk/hangman">
+              <h3 class="projects__flex__card__text">Hangman</h3>
+            <img src="./images/hangman.jpg" class="projects__flex__card__img" alt="picture of a project I did">
+          </a>
+            <p class="projects__flex__card__text">A hangman game written in Java and executed in the command line using a scanner. Type a letter in and see if it matches the word! This game solidified my understanding of simple Java and the four pillars of OOP.</p>
+          </div>
+          <div class="projects__flex__card">
             <a class="projects__flex__card__link" href="https://github.com/karinhawk/calculator">
               <h3 class="projects__flex__card__text">Vanilla Calculator</h3>
             <img src="./images/calculator.png" class="projects__flex__card__img" alt="picture of a project I did">
